updated the code

--- a/index.html
+++ b/index.html
@@ -118,36 +118,42 @@
         <div class="portfolio-box">
           <img src="images/project-1.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>Resume</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
               similique.
             </p>
-            <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="https://rabbani4007.github.io/resume/" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/project-2.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>Rabbani-cv</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
               similique.
             </p>
-            <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="https://rabbani4007.github.io/rabbani-cv/" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
         <div class="portfolio-box">
           <img src="images/project-1.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>React Admin</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
               similique.
             </p>
-            <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a href="https://rabbani4007.github.io/react-admin/" target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
@@ -166,12 +172,16 @@
         <div class="portfolio-box">
           <img src="images/project-1.jpg" alt="" />
           <div class="portfolio-layer">
-            <h4>Web Design</h4>
+            <h4>Angular Project Demo</h4>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
               similique.
             </p>
-            <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+            <a
+              href="https://rabbani4007.github.io/angular-project/home"
+              target="_blank"
+              ><i class="bx bx-link-external"></i
+            ></a>
           </div>
         </div>
 
