updated the code

--- a/index.html
+++ b/index.html
@@ -1,257 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RABBANI4007 Personal Portfolio Website</title>
 
-    <!-- boxicons css -->
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RABBANI4007 Personal Portfolio Website</title>
 
-    <!-- custom css -->
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <!-- header design -->
-    <header class="header">
-      <a href="#" class="logo">RABBANI4007</a>
+  <!-- boxicons css -->
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
-      <i class="bx bx-menu" id="menu-icon"></i>
+  <!-- custom css -->
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 
-      <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
+<body>
+  <!-- header design -->
+  <header class="header">
+    <a href="#" class="logo">RABBANI4007</a>
 
-    <!-- home section design -->
-    <section class="home" id="home">
-      <div class="home-content">
-        <h3>Hello, It's Me</h3>
-        <h1>Md Ghulam Rabbani</h1>
-        <h3>And I'm a <span class="multiple-text"></span></h3>
+    <i class="bx bx-menu" id="menu-icon"></i>
+
+    <nav class="navbar">
+      <a href="#home" class="active">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <!-- home section design -->
+  <section class="home" id="home">
+    <div class="home-content">
+      <h3>Hello, It's Me</h3>
+      <h1>Md Ghulam Rabbani</h1>
+      <h3>And I'm a <span class="multiple-text"></span></h3>
+      <p>
+        Hey there, I'm thrilled to welcome you to my portfolio! I'm a programming enthusiast with a particular passion
+        for languages like JavaScript, Python, HTML, and more. I'm constantly improving my programming skills through
+        learning and
+        working on exciting projects. I'm always eager to collaborate with others and take on new projects that
+        challenge me and push me to grow.
+      </p>
+      <div class="social-media">
+        <a href="https://github.com/rabbani4007/" target="_blank"><i class="bx bxl-github"></i></a>
+        <a href="#" target="_blank"><i class="bx bxl-twitter"></i></a>
+        <a href="#" target="_blank"><i class="bx bxl-instagram-alt"></i></a>
+        <a href="https://www.linkedin.com/in/rabbani4007/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+      </div>
+      <a href="images/MD GHULAM RABBANI.pdf1" target="_blank" class="btn">Download CV</a>
+    </div>
+    <div class="home-img">
+      <img src="images/home.jpg" alt="home page image" />
+    </div>
+  </section>
+
+  <!-- about section design -->
+  <section class="about" id="about">
+    <div class="about-img">
+      <img src="images/about.jpg" alt="" />
+    </div>
+    <div class="about-content">
+      <h2 class="heading">About <span>Me</span></h2>
+      <h3>Full Stack Developer</h3>
+      <p>
+        Hello! I am Mohammad Ghulam Rabbani. Full Stack Developer, ML
+        enthusiast, Photographer.
+      </p>
+      <a href="" class="btn">Read More</a>
+    </div>
+  </section>
+
+  <!-- services section design -->
+  <section class="services" id="services">
+    <h2 class="heading">Our <span>Services</span></h2>
+    <div class="services-container">
+      <div class="services-box">
+        <i class="bx bx-code-alt"></i>
+        <h3>Web Development</h3>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error
-          corrupti vero optio explicabo nam consectetur libero culpa incidunt
-          ipsa ratione. Vitae alias ullam officiis soluta laudantium. Maxime
-          illo nesciunt doloribus.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad
+          facere sequi nesciunt, tempora eum neque esse aliquam blanditiis
+          porro!
         </p>
-        <div class="social-media">
-          <a href="#"><i class="bx bxl-facebook"></i></a>
-          <a href="#"><i class="bx bxl-twitter"></i></a>
-          <a href="#"><i class="bx bxl-instagram-alt"></i></a>
-          <a href="#"><i class="bx bxl-linkedin"></i></a>
-        </div>
-        <a href="#" class="btn">Download CV</a>
+        <a href="#" class="btn">Read More</a>
       </div>
-      <div class="home-img">
-        <img src="images/home.jpg" alt="home page image" />
-      </div>
-    </section>
 
-    <!-- about section design -->
-    <section class="about" id="about">
-      <div class="about-img">
-        <img src="images/about.jpg" alt="" />
-      </div>
-      <div class="about-content">
-        <h2 class="heading">About <span>Me</span></h2>
-        <h3>Full Stack Developer</h3>
+      <div class="services-box">
+        <i class="bx bxs-paint"></i>
+        <h3>Graphic Design</h3>
         <p>
-          Hello! I am Mohammad Ghulam Rabbani. Full Stack Developer, ML
-          enthusiast, Photographer.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad
+          facere sequi nesciunt, tempora eum neque esse aliquam blanditiis
+          porro!
         </p>
-        <a href="" class="btn">Read More</a>
+        <a href="#" class="btn">Read More</a>
       </div>
-    </section>
 
-    <!-- services section design -->
-    <section class="services" id="services">
-      <h2 class="heading">Our <span>Services</span></h2>
-      <div class="services-container">
-        <div class="services-box">
-          <i class="bx bx-code-alt"></i>
-          <h3>Web Development</h3>
+      <div class="services-box">
+        <i class="bx bx-bar-chart-alt"></i>
+        <h3>Digital Marketing</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad
+          facere sequi nesciunt, tempora eum neque esse aliquam blanditiis
+          porro!
+        </p>
+        <a href="#" class="btn">Read More</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- portfolio section design -->
+  <section class="portfolio" id="portfolio">
+    <h2 class="heading">Latest <span>Project</span></h2>
+    <div class="portfolio-container">
+      <div class="portfolio-box">
+        <img src="images/project-1.jpg" alt="" />
+        <div class="portfolio-layer">
+          <h4>Resume</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad
-            facere sequi nesciunt, tempora eum neque esse aliquam blanditiis
-            porro!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+            similique.
           </p>
-          <a href="#" class="btn">Read More</a>
+          <a href="https://rabbani4007.github.io/resume/" target="_blank"><i class="bx bx-link-external"></i></a>
         </div>
+      </div>
 
-        <div class="services-box">
-          <i class="bx bxs-paint"></i>
-          <h3>Graphic Design</h3>
+      <div class="portfolio-box">
+        <img src="images/project-2.jpg" alt="" />
+        <div class="portfolio-layer">
+          <h4>Rabbani-cv</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad
-            facere sequi nesciunt, tempora eum neque esse aliquam blanditiis
-            porro!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+            similique.
           </p>
-          <a href="#" class="btn">Read More</a>
+          <a href="https://rabbani4007.github.io/rabbani-cv/" target="_blank"><i class="bx bx-link-external"></i></a>
         </div>
+      </div>
 
-        <div class="services-box">
-          <i class="bx bx-bar-chart-alt"></i>
-          <h3>Digital Marketing</h3>
+      <div class="portfolio-box">
+        <img src="images/project-1.jpg" alt="" />
+        <div class="portfolio-layer">
+          <h4>React Admin</h4>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad
-            facere sequi nesciunt, tempora eum neque esse aliquam blanditiis
-            porro!
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+            similique.
           </p>
-          <a href="#" class="btn">Read More</a>
+          <a href="https://rabbani4007.github.io/react-admin/" target="_blank"><i class="bx bx-link-external"></i></a>
         </div>
       </div>
-    </section>
 
-    <!-- portfolio section design -->
-    <section class="portfolio" id="portfolio">
-      <h2 class="heading">Latest <span>Project</span></h2>
-      <div class="portfolio-container">
-        <div class="portfolio-box">
-          <img src="images/project-1.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Resume</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              similique.
-            </p>
-            <a href="https://rabbani4007.github.io/resume/" target="_blank"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/project-2.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Rabbani-cv</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              similique.
-            </p>
-            <a href="https://rabbani4007.github.io/rabbani-cv/" target="_blank"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/project-1.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>React Admin</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              similique.
-            </p>
-            <a href="https://rabbani4007.github.io/react-admin/" target="_blank"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/project-4.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              similique.
-            </p>
-            <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/project-1.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Angular Project Demo</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              similique.
-            </p>
-            <a
-              href="https://rabbani4007.github.io/angular-project/home"
-              target="_blank"
-              ><i class="bx bx-link-external"></i
-            ></a>
-          </div>
-        </div>
-
-        <div class="portfolio-box">
-          <img src="images/project-2.jpg" alt="" />
-          <div class="portfolio-layer">
-            <h4>Web Design</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
-              similique.
-            </p>
-            <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
-          </div>
+      <div class="portfolio-box">
+        <img src="images/project-4.jpg" alt="" />
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+            similique.
+          </p>
+          <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
         </div>
       </div>
-    </section>
 
-    <!-- contact section design -->
-    <section class="contact" id="contact">
-      <h2 class="heading">Contact <span>Me!</span></h2>
-      <form action="#">
-        <div class="input-box">
-          <input type="text" id="txtFullName" placeholder="Full Name" />
-          <input
-            type="email"
-            id="txtEmailAddress"
-            placeholder="Email Address"
-          />
+      <div class="portfolio-box">
+        <img src="images/project-1.jpg" alt="" />
+        <div class="portfolio-layer">
+          <h4>Angular Project Demo</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+            similique.
+          </p>
+          <a href="https://rabbani4007.github.io/angular-project/home" target="_blank"><i
+              class="bx bx-link-external"></i></a>
         </div>
-        <div class="input-box">
-          <input
-            type="number"
-            id="txtMobileNumber"
-            placeholder="Mobile Number"
-          />
-          <input type="text" id="txtEmailSubject" placeholder="Email Subject" />
+      </div>
+
+      <div class="portfolio-box">
+        <img src="images/project-2.jpg" alt="" />
+        <div class="portfolio-layer">
+          <h4>Web Design</h4>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
+            similique.
+          </p>
+          <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
         </div>
-        <textarea
-          name=""
-          id="txtMessage"
-          cols="30"
-          rows="10"
-          placeholder="Your Message"
-        ></textarea>
-        <input
-          type="submit"
-          id="btnSendMessage"
-          value="Send Message"
-          class="btn"
-        />
-      </form>
-    </section>
-
-    <!-- footer design -->
-    <footer class="footer">
-      <div class="footer-text">
-        <p>Copyright &copy; 2023 by RABBANI4007 | All Rights Reserved.</p>
       </div>
-      <div class="footer-iconTop">
-        <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+    </div>
+  </section>
+
+  <!-- contact section design -->
+  <section class="contact" id="contact">
+    <h2 class="heading">Contact <span>Me!</span></h2>
+    <form action="#">
+      <div class="input-box">
+        <input type="text" id="txtFullName" placeholder="Full Name" />
+        <input type="email" id="txtEmailAddress" placeholder="Email Address" />
       </div>
-    </footer>
+      <div class="input-box">
+        <input type="number" id="txtMobileNumber" placeholder="Mobile Number" />
+        <input type="text" id="txtEmailSubject" placeholder="Email Subject" />
+      </div>
+      <textarea name="" id="txtMessage" cols="30" rows="10" placeholder="Your Message"></textarea>
+      <input type="submit" id="btnSendMessage" value="Send Message" class="btn" />
+    </form>
+  </section>
 
-    <!-- scroll reveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+  <!-- footer design -->
+  <footer class="footer">
+    <div class="footer-text">
+      <p>Copyright &copy; 2023 by RABBANI4007 | All Rights Reserved.</p>
+    </div>
+    <div class="footer-iconTop">
+      <a href="#home"><i class="bx bx-up-arrow-alt"></i></a>
+    </div>
+  </footer>
 
-    <!-- typed js -->
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+  <!-- scroll reveal -->
+  <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!-- custom js -->
-    <script src="js/script.js"></script>
-  </body>
+  <!-- typed js -->
+  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+  <!-- custom js -->
+  <script src="js/script.js"></script>
+</body>
+
 </html>
