updated the code

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
         <i class="bx bx-code-alt"></i>
         <h3>Web Development</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ad
-          facere sequi nesciunt, tempora eum neque esse aliquam blanditiis
-          porro!
+          In Web Development, I create websites and web applications using programming languages like HTML,
+          CSS, and JavaScript. I am learning how to use these languages to build the front-end user interface
+          and the back-end server-side functionality. I start by creating simple web pages working to upgrade
+          my skills more.
         </p>
         <a href="#" class="btn">Read More</a>
       </div>
