updated the code

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <h2 class="heading">Latest <span>Project</span></h2>
     <div class="portfolio-container">
       <div class="portfolio-box">
-        <img src="images/project-1.jpg" alt="" />
+        <img src="images/rabbani_resume.JPG" alt="" />
         <div class="portfolio-layer">
           <h4>Resume</h4>
           <p>
@@ -129,7 +129,7 @@
       </div>
 
       <div class="portfolio-box">
-        <img src="images/project-2.jpg" alt="" />
+        <img src="images/rabbani_cv.JPG" alt="" />
         <div class="portfolio-layer">
           <h4>Rabbani-cv</h4>
           <p>
@@ -141,7 +141,7 @@
       </div>
 
       <div class="portfolio-box">
-        <img src="images/project-1.jpg" alt="" />
+        <img src="images/react-admin.JPG" alt="" />
         <div class="portfolio-layer">
           <h4>React Admin</h4>
           <p>
