updated the code

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla,
             similique.
           </p>
-          <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+          <a href="https://rabbani4007.github.io/search" target="_blank"><i class="bx bx-link-external"></i></a>
         </div>
       </div>
 
