--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- header design -->
   <header class="header">
-    <a href="#" class="logo">RABBANI4007</a>
+    <a href="#" class="logo"><span>R</span>ABBANI4007</a>
 
     <i class="bx bx-menu" id="menu-icon"></i>
 
